Entry Page: Fix horizontal alignment of labels
Also uniformly set spacing via css rules. Also set all spacings as
multiples of 6.

Fixes issue introduced in 0498d8b724fb1c0b1a91d51fc8045e2ec2417ad4.

--- a/data/passwordsafe.css
+++ b/data/passwordsafe.css
@@ -258,3 +258,7 @@ infobar label.secondary {
 	border-radius: 8px;
 	border: 1px solid @borders
 }
+
+.properties_listbox > row {
+	margin-bottom: 12px;
+}
